--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/khanbh4i"
-
   },
   "keywords": [
     "gatsby"
@@ -16,7 +15,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "npm run build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
