--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run build",
+    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
